Revision history for Perl module Class::LazyObject

.10: 21 Feb 2003
	- First released version.

