@@ -1,0 +1,18 @@
+--- #YAML:1.0
+name:                Class-LazyObject
+version:             0.10_1
+abstract:            Deferred object construction
+license:             ~
+author:              
+    - Daniel C. Axelrod (daxelrod@cpan.org)
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
+    Carp::Clan:                    5
+    Class::Data::TIN:              0.02
+    Class::ISA:                    0
+    Test::Exception:               0.15
+    Test::More:                    0.47
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
